# ChangeLog for games-fps/quake1-panzer
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  25 Apr 2008; Piotr Szymaniak <lazy_bum@o2.pl>
  quake1-panzer-0_beta2.ebuild:
  Added tyrqw USE flag.

  27 Mar 2008; Piotr Szymaniak <lazy_bum@o2.pl>
  +quake1-panzer-0_beta2.ebuild:
  New package.
