@@ -1,3 +1,3 @@
 DIST panzer_beta2.zip 5963821 RMD160 01ecc8f5324296046cfc976ba55675066b6eacc5 SHA1 8b369763ae063af89e2663f1c23077f2f0122806 SHA256 342dc3904b65ea9a886dcf0393d326f785f6632e338045bd1e1cd92f3fd5ffaa
-EBUILD quake1-panzer-0_beta2.ebuild 493 RMD160 ff42708b68df27eb6f2930d71d80bc81477c22ce SHA1 fe78b22616ee3192eea8de52c519a1c683a31fe1 SHA256 4f5c252f41c87957ec20e229fb7581527f9a43290fcdcae2b508fc574a3f9467
-MISC ChangeLog 326 RMD160 ba4519d435d9d76eef57b4083e4801cab6762667 SHA1 0a5fcda3ee3c4fd0e7478f59c06db485c702cbb9 SHA256 9397e5f574a1a57abdd447e3848fd3f14d4610b7170a8d3b2e8cfd4e4d9643a9
+EBUILD quake1-panzer-0_beta2.ebuild 503 RMD160 d5478519802eabdbcfa5e55b4fa7ca6bdb8d0922 SHA1 58b583122499925eb4b4918311462f3123f8a600 SHA256 7ae6fde7530ac737f28a11774f1f3b6f755bc630b9ce874a680676750919514a
+MISC ChangeLog 430 RMD160 e0b2d69f548449c3b43a3781ee1a0f4515be39d2 SHA1 e3a394879712548d410acc334740a811101b019f SHA256 34d4dcb1b48b22da0d677a9b7a6aca97e5684849fec56092a4b67faa4b651843
